fix: dark mode btn responsive font size

--- a/client/src/assets/styles/_buttons.scss
+++ b/client/src/assets/styles/_buttons.scss
@@ -115,4 +115,8 @@
   &:focus {
     color: theme-color("primary-yellow");
   }
+
+  @include media-breakpoint-down(sm) {
+    @include rem(font-size, $font-size-14);
+  }
 }
